--- a/portfolio/src/styles/themes/_darkBlue.scss
+++ b/portfolio/src/styles/themes/_darkBlue.scss
@@ -221,6 +221,7 @@
     .filter-container {
         .filter-buttons button {
             background-color: $db-tertiary;
+            color: black;
         }
         
         .line {
